--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </h2><br /><br />
 	<div>
 	<center>
-	<h2><a href="./tourism/en/section1-1.php" >start questionnaire</a></h2><br /><br />
+	<h2><a href="part-1.html" >start questionnaire</a></h2><br /><br />
 	</center>
 	</div>
 
