--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
 
 		<center>
 		<h2>
-          แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน
-
-        </h2><br /><br />
+          แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน</h2>
 	<div>
 	<center>
-	<h2><a href="part-1.html" >start questionnaire</a></h2><br /><br />
+	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
 	</center>
 	</div>
 
