--- a/part-1.html
+++ b/part-1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="tab">
-    <form method="post" action="th_part1_add.php">
+    <form method="post">
         <!-- Section description -->
         <h2>ส่วนที่ 1 ข้อมูลทั่วข้อมูลทั่วไป</h2>
         <!------------ Questions set ------------>
@@ -423,8 +423,8 @@
 
             </p>
 		<center>
-      <button type="reset" style="background-color:#ffaa95;">&nbsp;&nbsp;&nbsp;ล้างคำตอบ&nbsp;&nbsp;&nbsp;</button>
-  		<button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;หน้าถัดไป&nbsp;&nbsp;&nbsp;</button>
+      <button type="reset" style="background-color:#ffaa95;">&nbsp;&nbsp;&nbsp;<a href="index.html" >ล้างคำตอบ</a>&nbsp;&nbsp;&nbsp;</button>
+  		<button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;<a href="part-2.html" >หน้าถัดไป</a>&nbsp;&nbsp;&nbsp;</button>
 		</center>
 		</br>
 		</form>
