--- a/part-1.html
+++ b/part-1.html
@@ -423,8 +423,8 @@
 
             </p>
 		<center>
-      <button type="reset" style="background-color:#ffaa95;">&nbsp;&nbsp;&nbsp;<a href="index.html" >ล้างคำตอบ</a>&nbsp;&nbsp;&nbsp;</button>
-  		<button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;<a href="part-2.html" >หน้าถัดไป</a>&nbsp;&nbsp;&nbsp;</button>
+      <a href="index.html"><button type="reset" style="background-color:#ffaa95;" >&nbsp;&nbsp;&nbsp;ล้างคำตอบ&nbsp;&nbsp;&nbsp;</button></a>
+  		<a href="part-2.html"><button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;หน้าถัดไป&nbsp;&nbsp;&nbsp;</button></a>
 		</center>
 		</br>
 		</form>
