--- a/part-1.html
+++ b/part-1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="tab">
-    <form method="post">
+    <form method="post" action="th_part1_add.php">
         <!-- Section description -->
         <h2>ส่วนที่ 1 ข้อมูลทั่วข้อมูลทั่วไป</h2>
         <!------------ Questions set ------------>
