--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 	  <title>Index</title>
   </head>
   <body>
@@ -17,11 +17,10 @@
 	  </center>
 
 		<center>
-		<h2>
-          แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน</h2>
+		<h2>แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน</h2>
 	<div>
 	<center>
-	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
+	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม yay</a></h2><br /><br />
 	</center>
 	</div>
 
