--- a/part-3.html
+++ b/part-3.html
@@ -226,8 +226,8 @@
               </p>
 
 		<center>
-      <button type="reset" style="background-color:#ffaa95;">&nbsp;&nbsp;&nbsp;ล้างคำตอบ&nbsp;&nbsp;&nbsp;</button>
-  		<button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;หน้าถัดไป&nbsp;&nbsp;&nbsp;</button>
+      <a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
+			<a href="part-4.html" class="next">หน้าถัดไป &raquo;</a>
 		</center>
 		</br>
 		</form>
