--- a/part-2.html
+++ b/part-2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="tab">
-    <form method="post" action="th_part2_add.php">
+    <form method="post">
         <!-- Section description -->
         <h2>ส่วนที่ 2 ข้อมูลพฤติกรรมการใช้รถใช้ถนน</h2>
         <!------------ Questions set ------------>
