--- a/part-3.html
+++ b/part-3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="tab">
-    <form method="post" action="th_part1_add.php">
+    <form method="post">
         <!-- Section description -->
         <h2>ส่วนที่ 3 ข้อมูลสะท้อนความยินดีจ่ายเพื่อลดความเสี่ยงการเกิดอุบัติเหตุในท้องถนน</h2>
         <!------------ Questions set ------------>
