--- a/part-4.html
+++ b/part-4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="tab">
-	<form method="post" action="th_part5_add.php">
+	<form method="post">
         <!-- Section description -->
         <h2>ส่วนที่ 4 มูลค่าความสูญเสียเชิงคุณภาพชีวิต</h2>
         <!------------ Questions set ------------>
