--- a/part-4.html
+++ b/part-4.html
@@ -120,8 +120,8 @@
             <input type="text" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
             </p>
 		<center>
-		<button type="reset" style="background-color:#ffaa95;">&nbsp;&nbsp;&nbsp;ล้างคำตอบ&nbsp;&nbsp;&nbsp;</button>
-		<button type="submit" style="background-color:#6ab3eb;">&nbsp;&nbsp;&nbsp;จบแบบสอบถาม&nbsp;&nbsp;&nbsp;</button>
+		<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
+			<a href="finished.html" class="next">จบแบบสอบถาม &raquo;</a>
 		</center>
 		</br>
 		</form>
