--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h2>แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน</h2>
 	<div>
 	<center>
-	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม yay</a></h2><br /><br />
+	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
 	</center>
 	</div>
 
