--- a/part-2.html
+++ b/part-2.html
@@ -41,7 +41,7 @@
             <p>
             <h4>12. ส่วนมากท่านเป็นผู้ใช้ถนนประเภทใด</h4>
             <label for="road-user1"><input type="radio" name="road-use-type" value="1" id="road-user1">ผู้ขับขี่</label>
-            <label for="road-user2"><input type="radio" name="road-use-type" value="2" id="road-user2" a href = "19">ผู้โดยสาร (ข้ามไปข้อ 19.)</a></label>
+            <label for="road-user2"><input type="radio" name="road-use-type" value="2" id="road-user2">ผู้โดยสาร <a href = "19">(ข้ามไปข้อ 19.)</a></label>
             </p>
 
             <p>
