--- a/part-1.html
+++ b/part-1.html
@@ -12,18 +12,8 @@
         <h2>ส่วนที่ 1 ข้อมูลทั่วข้อมูลทั่วไป</h2>
         <!------------ Questions set ------------>
 
-            <p>
-            <h4>1. เพศ</h4>
-            <label for="male"><input type="radio" name="gender" value="1" id="male">ชาย</label>
-            <label for="female"><input type="radio" name="gender" value="2" id="female">หญิง</label>
-            <label for="other-gender"><input type="radio" name="gender" value="3" id="other-gender">อื่นๆ</label>
-            </p>
-
-            <p>
-            <h4>2. อายุ <br><input type="number" name="age" min="0"> </h4>
-            </p>
-            <p>
-                        <h4>3. จังหวัดที่เก็บข้อมูล <br>
+	     <p>
+                        <h4>จังหวัดที่เก็บข้อมูล <br>
                         <select name="survey-prov" id="">
                             <option value="" disabled selected></option>
 
@@ -185,7 +175,18 @@
                         </h4>
                         </p>
             <p>
-                        <h4>4. จังหวัดทีผู้ตอบแบบสอบถามพำนักอยู่ <br>
+            <h4>1. เพศ</h4>
+            <label for="male"><input type="radio" name="gender" value="1" id="male">ชาย</label>
+            <label for="female"><input type="radio" name="gender" value="2" id="female">หญิง</label>
+            <label for="other-gender"><input type="radio" name="gender" value="3" id="other-gender">อื่นๆ</label>
+            </p>
+
+            <p>
+            <h4>2. อายุ <br><input type="number" name="age" min="0"> </h4>
+            </p>
+           
+            <p>
+                        <h4>3. ภูมิลำเนาของผู้ตอบแบบสอบถาม <br>
                         <select name="residing-prov" id="">
                             <option value="" disabled selected></option>
 
@@ -348,7 +349,7 @@
                         </p>
 
             <p>
-            <h4>5. ระดับการศึกษาสูงสุด</h4>
+            <h4>4. ระดับการศึกษาสูงสุด</h4>
             <label for="edu1"><input type="radio" name="education" value="1" id="edu1">ไม่ได้รับการศึกษา</label>
             <label for="edu2"><input type="radio" name="education" value="2" id="edu2">ประถมศึกษา</label>
             <label for="edu3"><input type="radio" name="education" value="3" id="edu3">มัธยมต้น </label>
@@ -361,7 +362,7 @@
             </p>
 
             <p>
-            <h4>6. อาชีพปัจจุบัน</h4>
+            <h4>5. อาชีพปัจจุบัน</h4>
             <label for="job1"><input type="radio" value="1" name="career" id="job1">นักเรียน/นักศึกษา</label>
             <label for="job2"><input type="radio" value="2" name="career" id="job2">แม่บ้าน/พ่อบ้าน เกษียณอายุ</label>
             <label for="job3"><input type="radio" value="3" name="career" id="job3">ข้าราชการ/พนักงานของรัฐ/รัฐวิสาหกิจ</label>
@@ -375,7 +376,7 @@
             </p>
 
             <p>
-            <h4>7. รายได้ส่วนตัว (บาท/เดือน)</h4>
+            <h4>6. รายได้ส่วนตัว (บาท/เดือน)</h4>
             <label for="incp1"><input type="radio" name="inc_personal" value="1" id="incp1">น้อยกว่า 5,000 บาท </label>
             <label for="incp2"><input type="radio" name="inc_personal" value="2" id="incp2">5,000-10,000 บาท</label>
             <label for="incp3"><input type="radio" name="inc_personal" value="3" id="incp3">10,001-15,000 บาท</label>
@@ -391,7 +392,7 @@
             </p>
 
             <p>
-            <h4>8. รายได้ครัวเรือน (บาทต่อเดือน)</h4>
+            <h4>7. รายได้ครัวเรือน (บาทต่อเดือน)</h4>
             <label for="inch1"><input type="radio" name="inc_family" value="1" id="inch1">น้อยกว่า 5,000 บาท </label>
             <label for="inch2"><input type="radio" name="inc_family" value="2" id="inch2">5,000-10,000 บาท</label>
             <label for="inch3"><input type="radio" name="inc_family" value="3" id="inch3">10,001-15,000 บาท</label>
@@ -407,7 +408,7 @@
             </p>
 
             <p>
-            <h4>9. ขนาดของครอบครัว</h4>
+            <h4>8. ขนาดของครอบครัว</h4>
             <label for="famsize1"><input type="radio" name="family_size" value="1" id="famsize1">1 คน</label>
             <label for="famsize2"><input type="radio" name="family_size" value="2" id="famsize2">2 คน</label>
             <label for="famsize3"><input type="radio" name="family_size" value="3" id="famsize3">3-4 คน</label>
