--- a/part-2.html
+++ b/part-2.html
@@ -41,7 +41,7 @@
             <p>
             <h4>11. ส่วนมากท่านเป็นผู้ใช้ถนนประเภทใด</h4>
             <label for="road-user1"><input type="radio" name="road-use-type" value="1" id="road-user1">ผู้ขับขี่</label>
-            <label for="road-user2"><input type="radio" name="road-use-type" value="2" id="road-user2">ผู้โดยสาร <a href = "18">(ข้ามไปข้อ 18.)</a></label>
+            <label for="road-user2"><input type="radio" name="road-use-type" value="2" id="road-user2">ผู้โดยสาร</label><a href = "18">(ข้ามไปข้อ 18.)</a>
             </p>
 
             <p>
