--- a/part-2.html
+++ b/part-2.html
@@ -162,7 +162,7 @@
 
     <p>
     <h4 a id = "18">18. ประสบการณ์ในการประสบอุบัติเหตุทางถนน</h4>
-    <label for="accident1"><input type="radio" name="accident" value="1" id="accident1">ไม่เคย (ข้ามไปส่วนที่ 3)</label>
+    <label for="accident1"><input type="radio" name="accident" value="1" id="accident1">ไม่เคย <a href = "part-3.html">(ข้ามไปส่วนที่ 3)>/a></label>
     <label for="accident2"><input type="radio" name="accident" value="2" id="accident2">1-2 ครั้ง</label>
     <label for="accident3"><input type="radio" name="accident" value="3" id="accident3">3-5 ครั้ง</label>
     <label for="accident4"><input type="radio" name="accident" value="4" id="accident4">6-8 ครั้ง</label>
@@ -171,7 +171,7 @@
 
     <p>
     <h4>19. หากมีประสบการณ์ในการประสบอุบัติเหตุทางถนน ท่านได้รับบาดเจ็บโดยที่<u>ไม่ต้องนอนรักษาตัวในโรงพยาบาล</u>ทั้งหมดกี่ครั้ง</h4>
-    <label for="non-admit1"><input type="radio" name="non-admit" value="1" id="non-admit1">ไม่เคย (ข้ามไปข้อที่ 21.)</label>
+    <label for="non-admit1"><input type="radio" name="non-admit" value="1" id="non-admit1">ไม่เคย <a href = "#21">(ข้ามไปข้อที่ 21.)</a></label>
     <label for="non-admit2"><input type="radio" name="non-admit" value="2" id="non-admit2">1-2 ครั้ง</label>
     <label for="non-admit3"><input type="radio" name="non-admit" value="3" id="non-admit3">3-5 ครั้ง</label>
     <label for="non-admit4"><input type="radio" name="non-admit" value="4" id="non-admit4">6-8 ครั้ง</label>
@@ -190,7 +190,7 @@
     </p>
 
     <p>
-    <h4>21. หากมีประสบการณ์ในการประสบอุบัติเหตุทางถนน ท่านได้รับบาดเจ็บจน<u>ต้องรักษาตัวในโรงพยาบาล</u>ทั้งหมดกี่ครั้ง</h4>
+    <h4 a id = "21">21. หากมีประสบการณ์ในการประสบอุบัติเหตุทางถนน ท่านได้รับบาดเจ็บจน<u>ต้องรักษาตัวในโรงพยาบาล</u>ทั้งหมดกี่ครั้ง</h4>
     <label for="admit1"><input type="radio" name="admit" value="1" id="admit1">1-2 ครั้ง</label>
     <label for="admit2"><input type="radio" name="admit" value="2" id="admit2">3-5 ครั้ง</label>
     <label for="admit3"><input type="radio" name="admit" value="3" id="admit3">6-8 ครั้ง</label>
