--- a/part-2.html
+++ b/part-2.html
@@ -162,7 +162,7 @@
 
     <p>
     <h4 a id = "18">18. ประสบการณ์ในการประสบอุบัติเหตุทางถนน</h4>
-    <label for="accident1"><input type="radio" name="accident" value="1" id="accident1">ไม่เคย <a href = "part-3.html">(ข้ามไปส่วนที่ 3)>/a></label>
+    <label for="accident1"><input type="radio" name="accident" value="1" id="accident1">ไม่เคย <a href = "part-3.html">(ข้ามไปส่วนที่ 3)</a></label>
     <label for="accident2"><input type="radio" name="accident" value="2" id="accident2">1-2 ครั้ง</label>
     <label for="accident3"><input type="radio" name="accident" value="3" id="accident3">3-5 ครั้ง</label>
     <label for="accident4"><input type="radio" name="accident" value="4" id="accident4">6-8 ครั้ง</label>
