--- a/part-2.html
+++ b/part-2.html
@@ -217,7 +217,7 @@
 
 		<center>
       <a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<a href="part-3.html" class="next">หน้าถัดไป &raquo;</a>
+			<a href="part-3-1.html" class="next">หน้าถัดไป &raquo;</a>
 		</center>
 		</br>
 		</form>
