--- a/part-3-0.html
+++ b/part-3-0.html
@@ -13,7 +13,7 @@
         <!------------ Questions set ------------>
 
             <p>
-              สมมติว่าท่านต้องเดินทางไปยังจุดหมายปลายทางแห่งหนึ่ง โดยมี 2 เส้นทางในการเดินทาง คือ เส้นทาง ก และเส้นทาง ข ซึ่งประกอบไปด้วยระยะเวลา ค่าใช้จ่ายในการเดินทางและความเสี่ยงที่จะเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ) แตกต่างกัน 9 สถานการณ์ กรุณาgเลือกทางเลือกที่ท่านเลือกในแต่ละกรณี (ตอบทั้ง 9 กรณี)
+              สมมติว่าท่านต้องเดินทางไปยังจุดหมายปลายทางแห่งหนึ่ง โดยมี 2 เส้นทางในการเดินทาง คือ เส้นทาง ก และเส้นทาง ข ซึ่งประกอบไปด้วยระยะเวลา ค่าใช้จ่ายในการเดินทางและความเสี่ยงที่จะเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ) แตกต่างกัน 9 สถานการณ์ กรุณาเลือกทางเลือกที่ท่านเลือกในแต่ละกรณี (ตอบทั้ง 9 กรณี)
             </p>
 <center>
       <a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
