--- a/part-3-3.html
+++ b/part-3-3.html
@@ -34,6 +34,7 @@
     </tr>
               </table>
               </p>
+	    <center>
       <a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
 			<a href="part-3-4.html" class="next">ถัดไป &raquo;</a>
 		</center>
