--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 		<center>
 		<h2>แบบสอบถาม: โครงการการศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน</h2>
+			<br>
+			<h2>มูลนิธิสถาบันวิจัยเพื่อการพัฒนาประเทศไทย (ทีดีอาร์ไอ) ได้รับการสนับสนุนทุนวิจัยจากสำนักงานการวิจัยแห่งชาติ (วช.) สำหรับการศึกษาเรื่อง “การศึกษาผลกระทบทางเศรษฐกิจและสังคมของอุบัติเหตุทางถนน” มีวัตถุประสงค์ในการวิเคราะห์มูลค่าความสูญเสียจากอุบัติเหตุทางถนน
+ของไทย เพื่อให้หน่วยงานด้านนโยบายสามารถนำไปใช้เป็นเกณฑ์อ้างอิงในการตัดสินใจทางนโยบาย และนำผลไปประเมินผลกระทบของมาตรการด้านความปลอดภัยทางถนน</h2>
 	<div>
 	<center>
 	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
