--- a/part-1.html
+++ b/part-1.html
@@ -417,6 +417,12 @@
             <label for="famsize6"><input type="radio" name="family_size" value="6" id="famsize6">9 คนขึ้นไป</label>
 
             </p>
+	    <p>
+            <h4>9. ท่านเป็นผู้หา<u>รายได้หลัก</u>ภายในครอบครัว ใช่หรือไม่ </h4>
+            <label for="main_income_yes"><input type="radio" name="income" value="1" id="main_income_yes">ใช่</label>
+            <label for="main_income_no"><input type="radio" name="income" value="2" id="main_income_no">ไม่ใช่</label>
+
+            </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
 			<a href="part-2.html" class="next">หน้าถัดไป &raquo;</a>
