--- a/part-3-0.html
+++ b/part-3-0.html
@@ -13,7 +13,7 @@
         <!------------ Questions set ------------>
 
             <p>
-              สมมติว่าท่านต้องเดินทางไปยังจุดหมายปลายทางแห่งหนึ่ง โดยมี 2 เส้นทางในการเดินทาง คือ เส้นทาง ก และเส้นทาง ข ซึ่งประกอบไปด้วยระยะเวลา ค่าใช้จ่ายในการเดินทางและความเสี่ยงที่จะเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ) แตกต่างกัน 9 สถานการณ์ กรุณาเลือกทางเลือกที่ท่านเลือกในแต่ละกรณี (ตอบทั้ง 9 กรณี)
+              หากท่านต้องเดินทางไปยังจุดหมายปลายทางแห่งหนึ่งโดยมีเส้นทางให้เลือก 2 เส้นทาง ซึ่งทั้ง 2 เส้นทาง มีระยะทางเท่ากันและมีปริมาณรถที่เดินทางอยู่ในแต่ละเส้นทาง 1,000 ครั้งต่อปี ท่านจะเลือกเส้นทางใดในการเดินทางระหว่างเส้นทาง ก และเส้นทาง ข โดยพิจารณาจากระยะเวลา ค่าใช้จ่ายในการเดินทาง จำนวนผู้บาดเจ็บสาหัสต่อปี และจำนวนผู้เสียชีวิตต่อปี กรุณาเลือกทางเลือกที่ท่านเลือกในแต่ละกรณี (ตอบทั้ง 9 กรณี) 
             </p>
 <center>
       <a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
