--- a/part-3-1.html
+++ b/part-3-1.html
@@ -16,21 +16,24 @@
               <table style="width:100%">
                 <tr>
       <th>เส้นทาง</th>
-      <th>เวลาในการเดินทาง</th>
+      <th>จำนวนผู้เสียชีวิต (คน)</th>
+      <th>จำนวนผู้บาดเจ็บสาหัส (คน)</th>
       <th>ค่าใช้จ่ายในการเดินทาง</th>
-      <th>ความเสี่ยงในการเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ)</th>
+      <th>เวลาในการเดินทาง</th>
     </tr>
     <tr>
       <td><label for="case-1-1"><input type="radio" name="case-1" value="1" id="case-1-1"></label></td>
-      <td> 1 ชม.</td>
-      <td>300 บาท</td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 36 ครั้ง</td>
+      <td>4</td>
+      <td>25</td>
+      <td>250 บาท</td>
+      <td>2 ชั่วโมง</td>
     </tr>
     <tr>
       <td><label for="case-1-2"><input type="radio" name="case-1" value="2" id="case-1-2"></label></td>
-      <td> 1 ชม. 20 น.</td>
-      <td>900 บาท</td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 15 ครั้ง</td>
+      <td>8</td>
+      <td>40</td>
+      <td>500 บาท</td>
+      <td>1 ชั่วโมง</td>
     </tr>
               </table>
               </p>
