--- a/part-3-3.html
+++ b/part-3-3.html
@@ -15,22 +15,25 @@
               <h4><u>กรณีที่ 3/9</u></h4>
               <table style="width:100%">
                 <tr>
-      <th>เส้นทาง </th>
-      <th>เวลาในการเดินทาง</th>
+     <th>เส้นทาง</th>
+      <th>จำนวนผู้เสียชีวิต (คน)</th>
+      <th>จำนวนผู้บาดเจ็บสาหัส (คน)</th>
       <th>ค่าใช้จ่ายในการเดินทาง</th>
-      <th>ความเสี่ยงในการเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ)</th>
+      <th>เวลาในการเดินทาง</th>
     </tr>
     <tr>
       <td><label for="case-3-1"><input type="radio" name="case-3" value="1" id="case-3-1"></label></td>
-      <td> 1 ชม.</td>
-      <td>600 บาท</td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 18 ครั้ง</td>
+      <td>6</td>
+      <td>45</td>
+      <td>200 บาท</td>
+      <td>2 ชั่วโมง</td>
     </tr>
     <tr>
       <td><label for="case-3-2"><input type="radio" name="case-3" value="2" id="case-3-2"></label></td>
-      <td> 1 ชม. 20 น.</td>
-      <td>300 บาท</td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 25 ครั้ง</td>
+      <td>8</td>
+      <td>40</td>
+      <td>400 บาท</td>
+      <td>1 ชั่วโมง</td>
     </tr>
               </table>
               </p>
