--- a/part-3-6.html
+++ b/part-3-6.html
@@ -16,21 +16,24 @@
               <table style="width:100%">
                 <tr>
       <th>เส้นทาง</th>
-      <th>เวลาในการเดินทาง</th>
+      <th>จำนวนผู้เสียชีวิต (คน)</th>
+      <th>จำนวนผู้บาดเจ็บสาหัส (คน)</th>
       <th>ค่าใช้จ่ายในการเดินทาง</th>
-      <th>ความเสี่ยงในการเกิดอุบัติเหตุรุนแรง (ตายและบาดเจ็บ)</th>
+      <th>เวลาในการเดินทาง</th>
     </tr>
     <tr>
       <td><label for="case-6-1"><input type="radio" name="case-6" value="1" id="case-6-1"></label></td>
-      <td> 1 ชม. 30 น.</td>
-      <td>600 บาท </td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 15 ครั้ง</td>
+      <td>9</td>
+      <td>40</td>
+      <td>100 บาท</td>
+      <td>3 ชั่วโมง</td>
     </tr>
     <tr>
       <td><label for="case-6-2"><input type="radio" name="case-6" value="2" id="case-6-2"></label></td>
-      <td>2 ชม.</td>
+      <td>5</td>
+      <td>30</td>
       <td>300 บาท</td>
-      <td>เดินทาง 100 ครั้ง เกิดอุบัติเหตุ 12 ครั้ง</td>
+      <td>1 ชั่วโมง 30 นาที</td>
     </tr>
               </table>
               </p>
