--- a/part-4.html
+++ b/part-4.html
@@ -18,7 +18,8 @@
   และครอบครัว เกิดต้นทุนทางสังคมจากการจัดการอุบัติเหตุและปัญหาการจราจร รวมไปถึงอุปสรรค
   ต่อการพัฒนาเศรษฐกิจจากการขาดแรงงาน ในการเกิดอุบัติเหตุ 1 ครั้ง ส่งผลให้เกิดต้นทุนความเสียหาย
   เกี่ยวกับมนุษย์ที่เกิดขึ้น ได้แก่ ค่ารักษาพยาบาล ค่าปลงศพกรณีเสียชีวิต ค่ารักษาพยาบาลระยะยาว
-  กรณีที่พิการ และรายได้ที่สูญเสียไป
+  กรณีที่พิการ และรายได้ที่สูญเสียไป ซึ่งจากการศึกษาในเบื้องต้นพบว่า ต้นทุนโดยรวมในกรณีเสียชีวิต เท่ากับ 2,235,700 บาท กรณีพิการ 2,071,000 บาท กรณีบาดเจ็บสาหัส 25,000 บาท และกรณี
+บาดเจ็บเล็กน้อย 2,100 บาท
               </p>
               <p>
                 ให้ท่านพิจารณามูลค่าความสูญเสียอื่นๆ ที่เกิดขึ้น เช่น ความเจ็บปวดและทุกข์ทรมานของผู้
