--- a/part-2.html
+++ b/part-2.html
@@ -27,13 +27,13 @@
 
             <p>
             <h4>11. ท่านเดินทางบนถนนใช้ยานพาหนะประเภทใด โดยส่วนใหญ่</h4>
-            <label for="veh1"><input type="radio" name="vehicle" value="1" id="veh1">รถจักรยาน</label>
+            <label for="veh1"><input type="radio" name="vehicle" value="1" id="veh1">รถยนต์ส่วนบุคคล</label>
             <label for="veh2"><input type="radio" name="vehicle" value="2" id="veh2">รถจักรยานยนต์</label>
-            <label for="veh3"><input type="radio" name="vehicle" value="3" id="veh3">รถยนต์ส่วนตัว</label>
-            <label for="veh4"><input type="radio" name="vehicle" value="4" id="veh4">รถตู้โดยสาร</label>
-            <label for="veh5"><input type="radio" name="vehicle" value="5" id="veh5">รถตู้โดยสาร</label>
-            <label for="veh6"><input type="radio" name="vehicle" value="6" id="veh6">ปริญญาตรี</label>
-            <label for="veh7"><input type="radio" name="vehicle" value="7" id="veh7">สูงกว่าปริญญาตรี</label>
+            <label for="veh3"><input type="radio" name="vehicle" value="3" id="veh3">รถตู้โดยสาร</label>
+            <label for="veh4"><input type="radio" name="vehicle" value="4" id="veh4">รถโดยสารประจำทาง</label>
+            <label for="veh5"><input type="radio" name="vehicle" value="5" id="veh5">รถสองแถวประจำทาง</label>
+            <label for="veh6"><input type="radio" name="vehicle" value="6" id="veh6">รถแท็กซี่</label>
+            <label for="veh7"><input type="radio" name="vehicle" value="7" id="veh7">รถจักรยาน</label>
             <label for="veh0"><input type="radio" name="vehicle" value="0" id="veh0">อื่นๆ (โปรดระบุ)</label>
             <input type="text" name="veh_other" placeholder="ยานพาหนะอื่นๆ โปรดระบุ">
             </p>
