--- a/part-2.html
+++ b/part-2.html
@@ -14,14 +14,14 @@
 
             <p>
             <h4>10. วัตถุประสงค์ของการเดินทางของท่าน โดยส่วนใหญ่ (เลือกได้มากกว่า 1 ข้อ) </h4>
-            <label for="trv-purpose1"><input type="radio" name="travel-purpose" value="1" id="trv-purpose1">ไปเรียน</label>
-            <label for="trv-purpose2"><input type="radio" name="travel-purpose" value="2" id="trv-purpose2">ไปทำงาน</label>
-            <label for="trv-purpose3"><input type="radio" name="travel-purpose" value="3" id="trv-purpose3">ซื้อสินค้า</label>
-            <label for="trv-purpose4"><input type="radio" name="travel-purpose" value="4" id="trv-purpose4">ท่องเที่ยว/พักผ่อน</label>
-            <label for="trv-purpose5"><input type="radio" name="travel-purpose" value="5" id="trv-purpose5">ติดต่อธุรกิจ</label>
-            <label for="trv-purpose6"><input type="radio" name="travel-purpose" value="6" id="trv-purpose6">ทำธุระส่วนตัว</label>
-            <label for="trv-purpose7"><input type="radio" name="travel-purpose" value="7" id="trv-purpose7">กลับบ้าน/ที่พักอาศัย</label>
-            <label for="trv-purpose0"><input type="radio" name="travel-purpose" value="0" id="trv-purpose0">อื่นๆ (โปรดระบุ)</label>
+            <label for="trv-purpose1"><input type="checkbox" name="travel-purpose1" value="1" id="trv-purpose1">ไปเรียน</label>
+            <label for="trv-purpose2"><input type="checkbox" name="travel-purpose2" value="2" id="trv-purpose2">ไปทำงาน</label>
+            <label for="trv-purpose3"><input type="checkbox" name="travel-purpose3" value="3" id="trv-purpose3">ซื้อสินค้า</label>
+            <label for="trv-purpose4"><input type="checkbox" name="travel-purpose4" value="4" id="trv-purpose4">ท่องเที่ยว/พักผ่อน</label>
+            <label for="trv-purpose5"><input type="checkbox" name="travel-purpose5" value="5" id="trv-purpose5">ติดต่อธุรกิจ</label>
+            <label for="trv-purpose6"><input type="checkbox" name="travel-purpose6" value="6" id="trv-purpose6">ทำธุระส่วนตัว</label>
+            <label for="trv-purpose7"><input type="checkbox" name="travel-purpose7" value="7" id="trv-purpose7">กลับบ้าน/ที่พักอาศัย</label>
+            <label for="trv-purpose0"><input type="checkbox" name="travel-purpose8" value="0" id="trv-purpose0">อื่นๆ (โปรดระบุ)</label>
             <input type="text" name="trv-purpose-other" placeholder="อื่นๆ โปรดระบุ">
             </p>
 
