--- a/part-4.html
+++ b/part-4.html
@@ -88,27 +88,27 @@
             <h4>กรณีที่ 1 หากหัวหน้าครอบครัวเสียชีวิตจากอุบัติเหตุทางถนน และได้รับการชดเชยเท่ากับ 2,235,700 บาท ท่านคิดว่าเพียงพอหรือไม่</h4>
             <label for="case-4-1-enough"><input type="radio" value="1" name="enough" id="case-4-1-enough">เพียงพอแล้ว</label>
             <label for="case-4-1-not-enough"><input type="radio" value="2" name="not-enough" id="case-4-1-not-enough">ไม่เพียงพอ</label>
-            <input type="text" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
+            <input type="number" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
             <label for="case-4-1-too-much"><input type="radio" value="3" name="too-much" id="case-4-1-too-much">มากเกินไป</label>
-            <input type="text" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
+            <input type="number" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
             </p>
 
             <p>
             <h4>กรณีที่ 2 หากหัวหน้าครอบครัวพิการจากอุบัติเหตุทางถนน และได้รับการชดเชยเท่ากับ 2,071,000 บาท ท่านคิดว่าเพียงพอหรือไม่่</h4>
             <label for="case-4-2-enough"><input type="radio" value="1" name="enough" id="case-4-2-enough">เพียงพอแล้ว</label>
             <label for="case-4-2-not-enough"><input type="radio" value="2" name="not-enough" id="case-4-2-not-enough">ไม่เพียงพอ</label>
-            <input type="text" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
+            <input type="number" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
             <label for="case-4-2-too-much"><input type="radio" value="3" name="too-much" id="case-4-2-too-much">มากเกินไป</label>
-            <input type="text" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
+            <input type="number" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
             </p>
 
             <p>
             <h4>กรณีที่ 3 หากหัวหน้าครอบครัวได้รับบาดเจ็บสาหัสจากอุบัติเหตุทางถนน และได้รับการชดเชยเท่ากับ 25,000 บาท ท่านคิดว่าเพียงพอหรือไม</h4>
             <label for="case-4-3-enough"><input type="radio" value="1" name="enough" id="case-4-3-enough">เพียงพอแล้ว</label>
             <label for="case-4-3-not-enough"><input type="radio" value="2" name="not-enough" id="case-4-3-not-enough">ไม่เพียงพอ</label>
-            <input type="text" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
+            <input type="number" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
             <label for="case-4-3-too-much"><input type="radio" value="3" name="too-much" id="case-4-3-too-much">มากเกินไป</label>
-            <input type="text" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
+            <input type="number" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
             </p>
 
             <p>
@@ -116,9 +116,9 @@
 ่</h4>
             <label for="case-4-4-enough"><input type="radio" value="1" name="enough" id="case-4-4-enough">เพียงพอแล้ว</label>
             <label for="case-4-4-not-enough"><input type="radio" value="2" name="not-enough" id="case-4-4-not-enough">ไม่เพียงพอ</label>
-            <input type="text" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
+            <input type="number" name="increased-amount" placeholder="ควรได้รับ(บาท)ุ">
             <label for="case-4-4-too-much"><input type="radio" value="3" name="too-much" id="case-4-4-too-much">มากเกินไป</label>
-            <input type="text" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
+            <input type="number" name="decreased-amount" placeholder="ควรได้รับ(บาท)ุุ">
             </p>
 		<center>
 		<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
