--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,7 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<a href="part-2.html" class="next" input type="submit">หน้าถัดไป &raquo;</a>
+			<a href="part-2.html" class="next"><input type="submit"/>หน้าถัดไป &raquo;</a>
 		</center>
 		</br>
 		</form>
