--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,7 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<input type="submit" value="หน้าถัดไป" a href="part-2.html" class="next"/> &raquo;</a>
+			<input type="submit" value="หน้าถัดไป &raquo;" a href="part-2.html" class="next"/></a>
 		</center>
 		</br>
 		</form>
