--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,10 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>
+			<form method="POST" action="part-2.html">
+       			<input type="submit" value="หน้าถัดไป &raquo;"/>
+     			</form>
+			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
 		</form>
