--- a/part-1.html
+++ b/part-1.html
@@ -428,9 +428,7 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<form method="POST" action="part-2.html">
-       			<input type="submit" value="หน้าถัดไป &raquo;"/>
-     			</form>
+			<input type="submit" value="หน้าถัดไป &raquo;"onclick="part-2.html"/button>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
