--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,7 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<input type="submit" value="หน้าถัดไป &raquo;"onclick="part-2.html"/button>
+			<input type="submit" value="หน้าถัดไป &raquo;"onclick="myFunction()"/button>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
@@ -436,5 +436,10 @@
 
     </div>
 
+<script>
+function myFunction() {
+  document.href.location = "part-2.html";
+}
+</script>
 </body>
 </html>
