--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,9 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<input type="submit" value="หน้าถัดไป &raquo;" onclick="myFunction()"/>
+			<form action="part-2.html">
+			<input type="submit" value="หน้าถัดไป &raquo;"/>
+			</form>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
@@ -436,10 +438,5 @@
 
     </div>
 
-<script>
-function myFunction() {
-  document.href.location = "part-2.html";
-}
-</script>
 </body>
 </html>
