--- a/part-1.html
+++ b/part-1.html
@@ -428,7 +428,7 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<form action="part-2.html">
+			<form action="https://tdri-road-safety.github.io/part-2.html">
 			<input type="submit" value="หน้าถัดไป &raquo;"/>
 			</form>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
