--- a/part-1.html
+++ b/part-1.html
@@ -428,9 +428,9 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<form action="https://tdri-road-safety.github.io/part-2.html">
+			<a href="https://tdri-road-safety.github.io/part-2.html">
 			<input type="submit" value="หน้าถัดไป &raquo;"/>
-			</form>
+			</a>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
