--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 ของไทย เพื่อให้หน่วยงานด้านนโยบายสามารถนำไปใช้เป็นเกณฑ์อ้างอิงในการตัดสินใจทางนโยบาย และนำผลไปประเมินผลกระทบของมาตรการด้านความปลอดภัยทางถนน</h2>
 	<div>
 	<center>
-	<h2><a href="part-1.html" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
+	<h2><a href="part-1.php" >เริ่มทำแบบสอบถาม</a></h2><br /><br />
 	</center>
 	</div>
 
