--- a/part-1.html
+++ b/part-1.html
@@ -427,10 +427,12 @@
 
             </p>
 		<center>
-			<a href="index.html" class="previous">&laquo; ล้างคำตอบ</a>
-			<form action="part-2.php" method="POST">
-			<input type="submit" value="หน้าถัดไป &raquo;"/>
-			</form>
+			<a href="index.html" class="previous">
+				<button type="reset" value="&laquo; ล้างคำตอบ"></button>
+			</a>
+			<a href="part-2.html">
+				<button type="submit" value="หน้าถัดไป &raquo;"></button>
+			</a>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
