--- a/part-1.html
+++ b/part-1.html
@@ -428,10 +428,10 @@
             </p>
 		<center>
 			<a href="index.html" class="previous">
-				<button type="reset" value="&laquo; ล้างคำตอบ"></button>
+				<button type="reset">&laquo; ล้างคำตอบ</button>
 			</a>
 			<a href="part-2.html">
-				<button type="submit" value="หน้าถัดไป &raquo;"></button>
+				<button type="submit">หน้าถัดไป &raquo;</button>
 			</a>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
