--- a/part-1.html
+++ b/part-1.html
@@ -430,7 +430,7 @@
 			<a href="index.html" class="previous">
 				<button type="reset">&laquo; ล้างคำตอบ</button>
 			</a>
-			<a href="part-2.html">
+			<a href="part-2.html" class="next">
 				<button type="submit">หน้าถัดไป &raquo;</button>
 			</a>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
