--- a/part-1.html
+++ b/part-1.html
@@ -430,9 +430,9 @@
 			<a href="index.html" class="previous">
 				<button type="reset">&laquo; ล้างคำตอบ</button>
 			</a>
-			<a href="part-2.html" class="next">
+			<form action="part-2.html" class="next" method="get">
 				<button type="submit">หน้าถัดไป &raquo;</button>
-			</a>
+			</form>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
 		</center>
 		</br>
