--- a/part-1.html
+++ b/part-1.html
@@ -427,10 +427,10 @@
 
             </p>
 		<center>
-			<a href="index.html" class="previous">
+			<form action="index.html" class="previous">
 				<button type="reset">&laquo; ล้างคำตอบ</button>
-			</a>
-			<form action="part-2.html" class="next">
+			</form>
+			<form action="part-2.html" class="next" method="post">
 				<button type="submit">หน้าถัดไป &raquo;</button>
 			</form>
 			<!--<a href="part-2.html"><input type="submit" value="หน้าถัดไป &raquo;"/></a>-->
